# rust-workshop

game-of-life/: Cargo.toml  README.md
game-of-life/src/: lib.rs  main.rs
