[package]
name = "game-of-life-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
winit_input_helper = "0.13.0"
pixels = "0.10.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = { version = "0.8.5", features = ["std"]}
